# MechType

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: main.yml
src/: App.css  App.tsx  AppComponent.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/soundPack/Opera Typing Sounds - Gamablob/: config.json
src-tauri/soundPack/banana+split+lubed/: config.json
src-tauri/soundPack/banana+split+stock/: config.json
src-tauri/soundPack/cherrymx-black-abs/: config.json
src-tauri/soundPack/cherrymx-brown-abs/: config.json
src-tauri/soundPack/cherrymx-brown-pbt/: config.json
src-tauri/soundPack/cherrymx-red-abs/: config.json
src-tauri/soundPack/nk-cream/: config.json
src-tauri/soundPack/opera-gx-typing-sounds/: config.json
src-tauri/soundPack/steelseries apex pro tkl (1)/: config.json
src-tauri/soundPack/super_paper_mario_v1/: config.json
src-tauri/src/: commands.rs  key_sound_core.rs  main.rs  test.rs
src/api/: Backend_Api_call.ts
src/components/FolderSelectionButton/: index.tsx  style.css
src/components/SearchBar/: index.tsx
src/components/TrackController/: index.tsx
