

[package]
name = "MechType"
version = "0.0.0"
description = "Makes mechanical keyboard sound effects on every key press"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "fs-create-dir", "fs-read-dir", "dialog-open", "fs-write-file", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rdev = "0.5.1"
libc = "0.2.66"
rodio_wav_fix = "0.15.0"
once_cell = "1.8.0"
flume = "0.10.9"


tokio ="1.33.0"


[target.'cfg(windows)'.dependencies]
thread-priority = "0.2.4"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
